--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -59,3 +59,7 @@
 [[constraint]]
   name = "github.com/urfave/cli"
   version = "1.20.0"
+
+[[constraint]]
+  name = "github.com/go-yaml/yaml"
+  version = "2.2.1"
