Added a more usable (hopefully) test harness around the CLI (#263)
Added a more usable (hopefully) test harnes around the CLI 
added basic CLI end-to-end tests
rmoved tests from tests.sh into go
moved some old tests into new ClI test dirs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,10 @@ jobs:
           command: |
             go get -u github.com/golang/dep/cmd/dep
             ${GOPATH}/bin/dep ensure --vendor-only
-      - run: make test
+      - run:
+          name: build and test
+          command: make test
+          no_output_timeout: 20m
       - deploy:
           command: |
             if [[ "${CIRCLE_BRANCH}" == "master" && -z "${CIRCLE_PR_REPONAME}" ]]; then
