Update oci-go-sdk to v1.4.0
This fixes an incompatibility with the API where authentication failed
for PATCH requests (`fn apps update`, `fn routes update`, etc.)

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -63,3 +63,7 @@
 [[constraint]]
   name = "github.com/go-yaml/yaml"
   version = "2.2.1"
+
+[[constraint]]
+  name = "github.com/oracle/oci-go-sdk"
+  version = "1.4.0"
