--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,7 +20,7 @@
 #  version = "2.4.0"
 
 
-[[constraint]]
+[[override]]
   name = "github.com/aws/aws-sdk-go"
   version = "1.12.28"
 
@@ -64,6 +64,3 @@
   name = "github.com/go-yaml/yaml"
   version = "2.2.1"
 
-[[constraint]]
-  name = "github.com/oracle/oci-go-sdk"
-  version = "1.4.0"
