--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,7 +20,7 @@
 #  version = "2.4.0"
 
 
-[[override]]
+[[constraint]]
   name = "github.com/aws/aws-sdk-go"
   version = "1.12.28"
 
@@ -34,15 +34,12 @@
 
 [[constraint]]
   name = "github.com/fnproject/fn_go"
-  version = "0.2.1"
+#  version = "0.2.1"
+  branch =  "add_providers"
 
 [[constraint]]
   name = "github.com/giantswarm/semver-bump"
   version = "1.1.1"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/go-openapi/strfmt"
 
 [[constraint]]
   branch = "master"
