--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,8 +34,7 @@
 
 [[constraint]]
   name = "github.com/fnproject/fn_go"
-#  version = "0.2.1"
-  branch =  "add_providers"
+  version = "0.2.7"
 
 [[constraint]]
   name = "github.com/giantswarm/semver-bump"
