--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -54,3 +54,7 @@ ignored = ["github.com/Azure/go-ansiterm*"]
   name = "github.com/go-yaml/yaml"
   version = "2.2.1"
 
+
+[[constraint]]
+  name = "github.com/mattn/go-isatty"
+  version = "0.0.3"
