Initial migrate command
Add tests for migration of all the supported language func files

Add json schema validation

refactor code

Validate json schema before and after func.yaml migration.

Create triggers for each migration.

add leading '/' to trigger source

make triggers an array

fix triggers error, and change trigger type in json schema

Add tests to vaidate trigger creation

fix dep issues

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -58,3 +58,11 @@ ignored = ["github.com/Azure/go-ansiterm*"]
 [[constraint]]
   name = "github.com/mattn/go-isatty"
   version = "0.0.3"
+
+[[constraint]]
+  name = "github.com/ghodss/yaml"
+  version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/xeipuuv/gojsonschema"
