--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,9 +29,7 @@ jobs:
       - run: docker version
       - run:
           name: install dependencies
-          command: |
-            go get -u github.com/golang/dep/cmd/dep
-            ${GOPATH}/bin/dep ensure --vendor-only
+          command: go mod vendor
       - run:
           name: build and test
           command: make test
