--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     working_directory: ~/go/src/github.com/fnproject/cli
     environment: # apparently expansion doesn't work here yet: https://discuss.circleci.com/t/environment-variable-expansion-in-working-directory/11322
       - GOPATH=/home/circleci/go
-      - GOVERSION=1.11.4
+      - GOVERSION=1.11.5
       - OS=linux
       - ARCH=amd64
     steps:
@@ -48,6 +48,9 @@ jobs:
             GO111MODULE: on
             GOFLAGS: -mod=vendor
             GOOS: windows
+      - run:
+          name: test build docker
+          command: docker build -t fnproject/fn:latest .
       - deploy:
           command: |
             if [[ "${CIRCLE_BRANCH}" == "master" && -z "${CIRCLE_PR_REPONAME}" ]]; then
