Deploy command will use '--local' option in LEGACY mode.

--- a/test/oci-auth/fn/contexts/functions-test.yaml
+++ b/test/oci-auth/fn/contexts/functions-test.yaml
@@ -1,5 +1,5 @@
 api-url: https://functions.us-ashburn-1.oraclecloud.com
 oracle.compartment-id: Fill me in
-oracle.profile: odx-jafar
+oracle.profile: Fill me in: PROFILE NAME
 provider: oracle
 registry: Fill me in
