Added optimistic concurrency based retries for Update App and Fn calls.

--- a/test/oci-auth/fn/contexts/functions-test.yaml
+++ b/test/oci-auth/fn/contexts/functions-test.yaml
@@ -1,4 +1,4 @@
-api-url: https://functions.us-ashburn-1.oraclecloud.com
+api-url: Fill me in
 oracle.compartment-id: Fill me in
 oracle.profile: Fill me in: PROFILE NAME
 provider: oracle
