Revert "Added optimistic concurrency based retries for Update App and Fn calls."
This reverts commit 7d431a7afe3c2aa9a2f89b6287183d7d18ba33a2.

--- a/test/oci-auth/fn/contexts/functions-test.yaml
+++ b/test/oci-auth/fn/contexts/functions-test.yaml
@@ -1,4 +1,4 @@
-api-url: Fill me in
+api-url: https://functions.us-ashburn-1.oraclecloud.com
 oracle.compartment-id: Fill me in
 oracle.profile: Fill me in: PROFILE NAME
 provider: oracle
